--- a/views/backend/dashboard.html
+++ b/views/backend/dashboard.html
@@ -16,7 +16,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="uielements/miscellaneous.html">
+					<a href="layout">
 						<span class="glyph shuffle"></span>
 						界面外观
 					</a>
