--- a/views/backend/edit.html
+++ b/views/backend/edit.html
@@ -18,7 +18,7 @@
           </a>
 			</li>
 			<li>
-				<a href="uielements/miscellaneous.html">
+				<a href="layout">
 					<span class="glyph shuffle"></span>
 					界面外观
           </a>
