--- a/views/backend/js.ejs
+++ b/views/backend/js.ejs
@@ -1,5 +1,5 @@
 	<script src="js/jquery.min.js"></script>
-	<script src="js/jqueryui.min.js"></script>
+	<script src="../js/vendor/jquery-ui-1.10.4.custom.min.js"></script>
 	<script src="js/jquery.cookies.js"></script>
 	<script src="js/jquery.pjax.js"></script>
 	<script src="js/formalize.min.js"></script>
