--- a/views/detail.html
+++ b/views/detail.html
@@ -646,7 +646,7 @@
 							</h2>
 							
 						</header>
-						<p style="height:800px;">我把这个广告系列命名为"读书的人",试图以正在看书的人身上散发出的那种特殊的美来表现对坚持自己人生信条的人们从心底的尊严。广告文案是"欢迎回到书的世界"。考虑将穿孔金属板进行冲压后,制作成 半透明且极薄的结构体。将大号文字摆放在便于识别的位置。这种结构具有薄轻性和穿透性,而且表里均可识读。欲望的教育这个词,在这段时间,将会成为创意的起点。如果一个物品是为了满足人们的期望 而诞生的,那么期望的本质就会作用于物品的本质。如果是要满足肚子的期望而将腰带放松些的话,那么估计就会诞生出追求宽松舒适的服装时尚吧。"欲求"(needs),常常是有惰性的。因此有必要对欲求 。进行教育。虽说无论是欲望还是教育都是太直白的词汇,但一时也找不到更合适的词能够与之替换。其实,在英文Education这个词汇里,除去教育这个含义之外,还有着赋予潜在的能力以梦想,并使之开花结 果的含义。而所谓设计,就必须要深刻作用于欲求的本质,即期望的水平,并需要起到潜移默化的教育作用。在杰出作品中所蕴含的美的意识常常会给人们以触动,并带来一次小的觉醒,就像花苞会慢慢膨胀 开放一样。对生活的期望也会因此而膨胀,与膨胀的期望相呼应,会诞生出新的物品,通过这样无数的循环与连接,就会酝酿出文化的土壤。而设计就是与土壤本质相关联的。</p>
+						<p>我把这个广告系列命名为"读书的人",试图以正在看书的人身上散发出的那种特殊的美来表现对坚持自己人生信条的人们从心底的尊严。广告文案是"欢迎回到书的世界"。考虑将穿孔金属板进行冲压后,制作成 半透明且极薄的结构体。将大号文字摆放在便于识别的位置。这种结构具有薄轻性和穿透性,而且表里均可识读。欲望的教育这个词,在这段时间,将会成为创意的起点。如果一个物品是为了满足人们的期望 而诞生的,那么期望的本质就会作用于物品的本质。如果是要满足肚子的期望而将腰带放松些的话,那么估计就会诞生出追求宽松舒适的服装时尚吧。"欲求"(needs),常常是有惰性的。因此有必要对欲求 。进行教育。虽说无论是欲望还是教育都是太直白的词汇,但一时也找不到更合适的词能够与之替换。其实,在英文Education这个词汇里,除去教育这个含义之外,还有着赋予潜在的能力以梦想,并使之开花结 果的含义。而所谓设计,就必须要深刻作用于欲求的本质,即期望的水平,并需要起到潜移默化的教育作用。在杰出作品中所蕴含的美的意识常常会给人们以触动,并带来一次小的觉醒,就像花苞会慢慢膨胀 开放一样。对生活的期望也会因此而膨胀,与膨胀的期望相呼应,会诞生出新的物品,通过这样无数的循环与连接,就会酝酿出文化的土壤。而设计就是与土壤本质相关联的。</p>
 					</article>
 					
 				</section>
