--- a/views/backend/gallery.html
+++ b/views/backend/gallery.html
@@ -2,7 +2,104 @@
 	<% include meta.ejs %>
 	
 	<title>CyanRhino Backend System</title>
-	
+	<style>
+	.isotope:after {
+		content: '';
+		display: block;
+		clear: both;
+	}
+	.item { 
+		margin:5px 5px 0 0;
+		padding:15px;
+		float:left;
+		width:128px;
+		word-wrap:break-word;
+		white-space:normal;
+		word-break:break-word;
+		word-spacing:normal;
+		border:1px solid #fafafa;
+		cursor:pointer;
+		-webkit-transition:all .2s linear;
+		-khtml-transition:all .2s linear;
+		-moz-transition:all .2s linear;
+		-ms-transition:all .2s linear;
+		-o-transition:all .2s linear;
+		transition:all .2s linear;
+	}
+	.item:hover{
+		border:1px solid #666;		
+	}
+	.item.on,.item + .on{
+		background:#ecf0f1;
+		box-shadow:inset 1px 1px 10px #cacaca;
+	}
+	.box-content{
+		overflow: hidden;
+		min-height:250px;
+		height:100%;
+	}
+	label.list{
+		display:inline-block;	
+	}
+	p{
+		margin:0;
+		margin-top:5px;
+	}
+	</style>
+	<style>
+	.bootstrap-tagsinput {
+	  background-color: #fff;
+	  border: 1px solid #ccc;
+	  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	  display: inline-block;
+	  padding: 4px 0;
+	  margin: 0;
+	  color: #555;
+	  vertical-align: middle;
+	  border-radius: 4px;
+	  max-width: 100%;
+	  line-height: 22px;
+	  font-size:10px;
+	}
+	.bootstrap-tagsinput input {
+	  border: none;
+	  box-shadow: none;
+	  outline: none;
+	  background-color: transparent;
+	  padding: 0;
+	  margin: 0;
+	  width: auto !important;
+	  max-width: inherit;
+	}
+	.bootstrap-tagsinput input:focus {
+	  border: none;
+	  box-shadow: none;
+	}
+	.bootstrap-tagsinput .tag {
+	  margin-right: 2px;
+	  color: #666;
+	  font-size:10px;
+	}
+	.bootstrap-tagsinput .tag [data-role="remove"] {
+	  margin-left: 8px;
+	  cursor: pointer;
+	}
+	.bootstrap-tagsinput .tag [data-role="remove"]:after {
+	  content: "x";
+	  padding: 0px 2px;
+	}
+	.bootstrap-tagsinput .tag [data-role="remove"]:hover {
+	  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+	}
+	.bootstrap-tagsinput .tag [data-role="remove"]:hover:active {
+	  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+	}
+	form .bootstrap-tagsinput input[type="text"]{
+		background:none;
+		border:none;
+		height:20px;
+	}
+	</style>
 </head>
 
 <body>
@@ -17,7 +114,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="uielements/miscellaneous.html">
+				<a href="layout">
 					<span class="glyph shuffle"></span>
 					界面外观
 				</a>
@@ -73,15 +170,46 @@
 				
 				<div class="box-content">
 
+					<div id="filters" class="button-group">
+						<button data-filter="*" class="button small">show all</button>
+						<button data-filter=".metal" class="button small">metal</button>
+						<button data-filter=".transition" class="button small">transition</button>
+						<button data-filter=".alkali, .alkaline-earth" class="button small">alkali & alkaline-earth</button>
+						<button data-filter=":not(.transition)" class="button small">not transition</button>
+						<button data-filter=".metal:not(.transition)" class="button small">metal but not transition</button>
+					</div>
 
-<div class="container_12 clearfix leading">
-	<div class="grid_12">
-		
-	</div>
-</div>
-
-
-
+					<div id="fotoWrapper">
+						<% for(var i=0;data &&  i<data.length; i++) { %>
+							<div class="item">
+								<figure>
+									<img src="<%= data[i].imagePath%>" />
+									<!-- <figcaption><%= data[i].imageName%></figcaption> -->									
+								</figure>	
+								<form action="../" method="post" novalidate="novalidate">								
+									<p>
+										<input type="radio" name="size_<%= data[i].imageName%>" id="<%=i%>" />
+										<label for="<%=i%>">Full</label>
+										<input type="radio" name="size_<%= data[i].imageName%>" />
+										<label for="<%=i%>">Half</label>
+										<input type="radio" name="size_<%= data[i].imageName%>" />
+										<label for="<%=i%>">1/3</label>
+										<input type="radio" name="size_<%= data[i].imageName%>" />
+										<label for="<%=i%>">2/3</label>
+									</p>										
+								
+									<p>
+										<input type="text" id="caption" placeholder="图片标题" name="caption" class="{validate:{required:true, minlength:3}}" />									
+									</p>
+									<p>
+										<input type="text" id="summary" placeholder="请输入图片描述" name="summary" class="{validate:{required:true, minlength:3}}" />
+									</p>
+								
+									<input type="text" class="tag" value="" placeholder="请输入图片标签" />
+								</form>
+							</div>
+						<% } %>
+					</div>
 
 
 				</div>
@@ -92,6 +220,38 @@
 	
 	<% include js.ejs %>
 
+	<script src="/js/vendor/isotope.pkgd.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/vendor/fit-columns.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/vendor/bootstrap-tagsinput.min.js" type="text/javascript" charset="utf-8"></script>
+
+	
+	<script>
+	$(function(){
+		var $container = $('#fotoWrapper');	
+		// $container.isotope({
+		// 	itemSelector: '.item',
+		// 	layoutMode: 'fitRows',
+		// 	filter:'.item'
+		// });
+		
+		
+		$('#filters').on( 'click', 'button', function() {
+		  var filterValue = $(this).attr('data-filter');
+		  $container.isotope({ filter: filterValue,layoutMode: 'fitColumns' });
+		});
+
+		$('.item').on('click',function(){
+			if(!$(this).hasClass('on')){
+				$('.item').removeClass('on');
+				$(this).addClass('on');
+			}
+		});
+		
+		$('.tag').tagsinput({
+		  maxTags: 3
+		});
+	});
+	</script>
 
 
 
