--- a/views/backend/meta.ejs
+++ b/views/backend/meta.ejs
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	<meta name="viewport" content="width=1024, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=3.0, user-scalable=yes" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
   
 	<!-- Stylesheets -->
