--- a/views/backend/statistics.html
+++ b/views/backend/statistics.html
@@ -15,7 +15,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="uielements/miscellaneous.html">
+				<a href="layout">
 					<span class="glyph shuffle"></span>
 					界面外观
 				</a>
