--- a/views/contact.html
+++ b/views/contact.html
@@ -339,6 +339,12 @@
 				background-position:0 -75px;
 				font-family:STXIHEI,'华文细黑',sans-serif;
 			}
+			.contact li a{
+				color:#fff;
+				font-size:12px;
+				line-height:23px;
+				font-family:STXIHEI,'华文细黑',sans-serif;
+			}
 			.contact li.pull-right{
 				float:right !important;
 				margin-left:40px;
@@ -612,14 +618,14 @@
 						</li>
 					
 						<li class="pull-right">
-							www.cyanrhino.com
+							<a href="http://www.cyanrhino.com">www.cyanrhino.com</a>
 						</li>
 					
 						<li class="pull-right">
 							F +021 52387577
 						</li>
 						<li class="pull-right">
-							T +021 52387577
+							<a href="tel:+8602152387577">T +021 52387577</a>
 						</li>
 					</ul>	
 				</footer>
