--- a/views/home.html
+++ b/views/home.html
@@ -477,7 +477,7 @@
 		<style>
 		/* ---- .element-item ---- */
 		#tiles{
-			padding-top:10px;
+			padding-top:2px;
 		}
 		.item {
 			float: left;
@@ -1180,7 +1180,7 @@
 					<li><a href="">3</a></li>
 					<li><a href="">4</a></li>
 					<li><a rel="last" href="">5</a></li>
-					<li class="next"><a rel="next" href="/showcase">&rarr;</a></li>
+					<li class="next"><a rel="next" href="">&rarr;</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -1347,7 +1347,7 @@
 			$(function(){
 				$('#tiles').jscroll({
 				    loadingHtml: '',
-				    padding: 2,
+				    //padding: 2,
 				    nextSelector: '#pagination .next a:last',
 				    contentSelector: '.item'
 				});	
