--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,6 +24,13 @@ html {
     line-height: 1.4;
 }
 
+html, body{
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select:none;
+}
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
