--- a/views/backend/edit.html
+++ b/views/backend/edit.html
@@ -89,6 +89,11 @@
 							</select>
 						</p>
 						
+						<p>
+							<input type="checkbox" name="isRecommend" id="isRecommend" />
+							<label for="isRecommend">是否置顶推荐？</label>
+						</p>
+						
 			
 						<div>							
 						</div>
@@ -142,6 +147,13 @@
 			// }
 		});
 		
+		
+		<% if(typeof article !== "undefined") {%>
+			<% if(article.isRecommend){%>
+			$('label[for="isRecommend"]').addClass('checked');
+			$('#isRecommend').attr('checked','checked');
+			<%}%>
+		<%}%>
 	});
 	</script>
 
