--- a/views/backend/gallery.html
+++ b/views/backend/gallery.html
@@ -33,10 +33,10 @@
 		background:#ecf0f1;
 		box-shadow:inset 1px 1px 10px #cacaca;
 	}
-	.box-content{
-		overflow: hidden;
-		min-height:250px;
-		height:100%;
+	#main .box-content{
+		overflow-x: hidden;
+		overflow-y:auto;
+		min-height:80%;
 	}
 	label.list{
 		display:inline-block;	
@@ -44,6 +44,13 @@
 	p{
 		margin:0;
 		margin-top:5px;
+	}
+	#fotoWrapper figure{
+		max-height: 300px;
+		overflow: hidden;
+	}
+	#filters{
+		margin:10px 0 0 10px;
 	}
 	</style>
 	<style>
@@ -161,6 +168,24 @@
 
 	<section id="maincontainer">
 		<div id="main" class="container_12">
+			<div id="confirm" class="box">
+				<div class="box-header">
+					<h1>友情提示</h1>
+				</div>
+
+				<div class="box-content">
+					<p>你正在<strong>删除</strong>该条记录</p>
+					<p>是否继续？</p>
+			
+
+					<div class="action_bar">
+						<form action="" method="get">
+							<a href="#" class="close small button">取消</a>
+							<input type="submit" class="button small blue" value="确认" />
+						</form>
+					</div>
+				</div>
+			</div>
 
 			<div class="box">
 				<div class="box-header">
@@ -168,16 +193,18 @@
 
 				</div>
 				
+				<div id="filters" class="button-group">
+					<button data-filter="*" class="button small">show all</button>
+					<button data-filter=".metal" class="button small">metal</button>
+					<button data-filter=".transition" class="button small">transition</button>
+					<button data-filter=".alkali, .alkaline-earth" class="button small">alkali & alkaline-earth</button>
+					<button data-filter=":not(.transition)" class="button small">not transition</button>
+					<button data-filter=".metal:not(.transition)" class="button small">metal but not transition</button>
+				</div>
+				
 				<div class="box-content">
 
-					<div id="filters" class="button-group">
-						<button data-filter="*" class="button small">show all</button>
-						<button data-filter=".metal" class="button small">metal</button>
-						<button data-filter=".transition" class="button small">transition</button>
-						<button data-filter=".alkali, .alkaline-earth" class="button small">alkali & alkaline-earth</button>
-						<button data-filter=":not(.transition)" class="button small">not transition</button>
-						<button data-filter=".metal:not(.transition)" class="button small">metal but not transition</button>
-					</div>
+					
 
 					<div id="fotoWrapper">
 						<% for(var i=0;data &&  i<data.length; i++) { %>
@@ -188,26 +215,34 @@
 								</figure>	
 								<form action="../" method="post" novalidate="novalidate">								
 									<p>
-										<input type="radio" name="size_<%= data[i].imageName%>" id="<%=i%>" />
-										<label for="<%=i%>">Full</label>
-										<input type="radio" name="size_<%= data[i].imageName%>" />
-										<label for="<%=i%>">Half</label>
-										<input type="radio" name="size_<%= data[i].imageName%>" />
-										<label for="<%=i%>">1/3</label>
-										<input type="radio" name="size_<%= data[i].imageName%>" />
-										<label for="<%=i%>">2/3</label>
+										<input type="radio" name="layout_<%= data[i]._id%>" value="0" id="<%= data[i]._id%>_0" <%if(0==data[i].layout) {%> checked="checked"<%}%>  />
+										<label for="<%= data[i]._id%>_0">Full</label>
+										<input type="radio" name="layout_<%= data[i]._id%>" value="1" id="<%= data[i]._id%>_1" <%if(1==data[i].layout) {%> checked="checked"<%}%> />
+										<label for="<%= data[i]._id%>_1">Half</label>
+										<input type="radio" name="layout_<%= data[i]._id%>" value="2" id="<%= data[i]._id%>_2" <%if(2==data[i].layout) {%> checked="checked"<%}%> />
+										<label for="<%= data[i]._id%>_2">1/3</label>
+										<input type="radio" name="layout_<%= data[i]._id%>" value="3" id="<%= data[i]._id%>_3" <%if(3==data[i].layout) {%> checked="checked"<%}%> />
+										<label for="<%= data[i]._id%>_3">2/3</label>
+										<input type="hidden" value="<%= data[i]._id%>" name="target" />
 									</p>										
 								
 									<p>
-										<input type="text" id="caption" placeholder="图片标题" name="caption" class="{validate:{required:true, minlength:3}}" />									
+										<input type="text" id="caption_<%= data[i]._id%>" placeholder="图片标题" name="caption" class="{validate:{required:true, minlength:3}}" required="required" value="<%= data[i].title%>" />									
 									</p>
 									<p>
-										<input type="text" id="summary" placeholder="请输入图片描述" name="summary" class="{validate:{required:true, minlength:3}}" />
+										<textarea id="summary_<%= data[i]._id%>" placeholder="请输入图片描述" name="summary" class="{validate:{required:true, minlength:3}}" required="required"><%= data[i].content%></textarea>
 									</p>
-								
-									<input type="text" class="tag" value="" placeholder="请输入图片标签" />
+									<p>
+										<input type="text" class="tag" name="tag" id="tag_<%= data[i]._id%>" value="<%=data[i].tag%>" placeholder="请输入图片标签" />
+									</p>
+									<p>
+										<a href="#confirm" class="button small modal" data-id="<%= data[i]._id%>">删除</a>
+										<input type="submit" class="button small blue" value="保存" />
+									</p>
 								</form>
 							</div>
+							
+							
 						<% } %>
 					</div>
 
@@ -217,6 +252,9 @@
 
 		</div>
 	</section>
+	
+	
+	
 	
 	<% include js.ejs %>
 
@@ -234,6 +272,8 @@
 		// 	filter:'.item'
 		// });
 		
+
+		
 		
 		$('#filters').on( 'click', 'button', function() {
 		  var filterValue = $(this).attr('data-filter');
@@ -250,10 +290,52 @@
 		$('.tag').tagsinput({
 		  maxTags: 3
 		});
+		
+		$('#fotoWrapper form').submit(function(e){
+			e.preventDefault();
+			if ($(this)[0].checkValidity()) {
+				$.post( "/backend/gallery/update/"+$(this).find('[name="target"]').val(), $(this).serialize()+"&layout="+$(this).find('[name^="layout"]:checked').val(), function( data ) {
+					alert( "保存成功 " + data );
+				}).done(function() {
+					//alert( "second success" );
+				})
+				.fail(function() {
+					alert( "error" );
+				});
+			}
+		});
+		
+		$('#confirm form').submit(function(e){
+			e.preventDefault();
+			$.get( $(this).attr('action'), function( data ) {
+				var path=$('#confirm form').attr('action');
+				path=path.slice(path.lastIndexOf('/')+1,path.length);
+				$('[value="'+path+'"]').parents('.item').remove();
+				$('#confirm form a').trigger('click');
+			}).done(function() {
+				//alert( "second success" );
+			})
+			.fail(function() {
+				alert( "error" );
+			});
+		});
+		
+		$('#fotoWrapper p a').on('click',function(e){
+			$('#confirm form').attr('action','/backend/gallery/remove/'+$(this).attr('data-id'));			
+		});
+		
+		
 	});
 	</script>
 
-
+	<script>
+	$(function(){
+		$('form label.prettyCheckbox').on('click',function() {
+			$(this).parents('form').find('input:radio').attr('checked',false);
+		    $(this).prev('input').attr('checked',$(this).hasClass('checked'));
+		});
+	});
+	</script>
 
 </body>
 
