--- a/views/index.html
+++ b/views/index.html
@@ -245,7 +245,7 @@
 		}
 		</style>
     </head>
-    <body>
+    <body oncontextmenu="window.event.returnValue=false" ondragstart="return false" onselectstart="return false">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
