--- a/views/news.html
+++ b/views/news.html
@@ -606,9 +606,10 @@
 			width:80%;
 			margin:30px auto;
 		}
-			.news-detail  h2{
+			.news-detail h2{
 				font-family:hanyitexidengxianj;
 				color:#595857;
+				margin-bottom:0;
 			}
 			.news-detail .pubdate{
 				font-family:Din-Light,serif;
@@ -617,6 +618,7 @@
 			.news-detail p{
 				font-family:STXIHEI,'华文细黑';
 				color:#595857;
+				margin:0;
 			}
 			.news-list,
 			.news-list li,
@@ -629,6 +631,24 @@
 			.news-list h3{
 				border-bottom:1px solid #231916;
 			}
+			.news-list ul{
+				margin:0;
+				padding:0;
+			}
+			.news-list li{
+				list-style:none;
+			}
+				.news-list li a{
+					border-bottom:1px solid #999;
+				}
+				.news-list li p{
+					display:none;
+					margin-top:0;
+				}
+				.news-list li a span{
+					padding-right: 20px;
+					border-bottom: 1px solid white;
+				}
 		</style>
     </head>
 	<body>
@@ -687,17 +707,17 @@
 			<div class="clearfix"></div>
 			<div class="container page-width">
 				<section class="news-detail">
-					<% for(var i=0;i<2;i++) {%>
+					<% for(var i=0;i<2 && i< feature.length;i++) {%>
 					<article>
 						<header>
 							<h2>
-								<time datetime="<%=list[list.length-i-1].postdate%>" pubdate="pubdate" class="pubdate"><%=(list[list.length-i-1].postdate.getMonth()+1)+'/'+ list[i].postdate.getDate()%></time>
-								<%=list[list.length-i-1].title%>
+								<time datetime="<%=feature[i].postdate%>" pubdate="pubdate" class="pubdate"><%=(feature[i].postdate.getMonth()+1)+'/'+ feature[i].postdate.getDate()%></time>
+								<%=feature[i].title%>
 							</h2>
 							
 						</header>
 						<p>
-							<%-list[list.length-i-1].content%>							
+							<%-feature[i].content%>							
 						</p>
 					</article>
 					<%}%>					
@@ -707,10 +727,11 @@
 					<ul>  
 						<% list.forEach(function(news){ %>
 							<li>
-								<a href="#">
-									<span class="pubdate"><%= news.postdate.getFullYear()+'.'+(1+news.postdate.getMonth())+'.'+news.postdate.getDate()%></span>
+								<a href="javascript:;">
+									<span class="pubdate"> <%= news.postdate.getFullYear()+'.'+(1+news.postdate.getMonth())+'.'+news.postdate.getDate()%></span>
 									<%=news.title%>
 								</a>
+								<p><%=news.content%></p>
 							</li>
 						<% }) %>						
 					</ul>  
@@ -771,7 +792,12 @@
 					$(this).find(".hover-animate-up--span:last").clearQueue().stop().animate({top: "200px"}, {duration: 500});
 				});
 			
-				
+				$('.news-list li a').on('click',function(e){
+					if('block'!=$(this).next('p').css('display')){
+						$('.news-list li p').slideUp();
+					}
+					$(this).next('p').slideToggle();
+				});
 			});
 			</script>
 			
