--- a/views/backend/users.html
+++ b/views/backend/users.html
@@ -77,7 +77,7 @@
 							<th>Name</th>
 							<th>Email</th>
 							<th>Role</th>
-							<th>Actions</th>
+							<th style="width:100px;">Actions</th>
 						</tr>
 					</thead>
 					<tbody>
