--- a/views/home.html
+++ b/views/home.html
@@ -481,7 +481,7 @@
 		}
 		.item {
 			float: left;
-			width: 32.94%;
+			
 			height: 362px;	
 			margin: 2px; 
 			background: #888;
@@ -501,8 +501,10 @@
 			-ms-transition: all 0.4s ease-in-out;
 			transition: all 0.4s ease-in-out;
 		}
-
-		.big{
+		.onethird{
+			width: 32.94%;
+		}
+		.twothirds{
 		  width:66.3%;
 		}
 
@@ -754,11 +756,11 @@
 				background-repeat:no-repeat;
 				background-size:100% auto;
 			}
-			.item {
+			.onethird {
 			  width: 102.6667px;
 			}
 
-			.big{
+			.twothirds{
 			  width:209.3px;
 			}
 
@@ -801,11 +803,11 @@
 				font-size: 24px !important;
 				line-height: 1.14em;
 			}
-			.item {
+			.onethird {
 			  width: 32.84%;
 			}
 
-			.big{
+			.twothirds{
 			  width:66.18%;
 			}
 
@@ -876,11 +878,11 @@
 				font-size: 60px !important;
 				line-height: 1.14em;
 			}
-			.item {
+			.onethird {
 			  width: 33%;
 			}
 
-			.big{
+			.twothirds{
 			  width:66.3%;
 			}
 
@@ -923,11 +925,11 @@
 				font-size: 60px !important;
 				line-height: 1.14em;
 			}
-			.item {
+			.onethird {
 			  width: 33.01444444444%;
 			}
 
-			.big{
+			.twothirds{
 			  width:66.5%;
 			}
 
@@ -970,11 +972,11 @@
 				font-size: 60px !important;
 				line-height: 1.14em;
 			}
-			.item {
+			.onethird {
 			  width: 33.01444444444%;
 			}
 
-			.big{
+			.twothirds{
 			  width:66.5%;
 			}
 
@@ -1065,7 +1067,7 @@
 			</div> -->
 			<div class="clearfix"></div>
 			<div class="page-width" id="tiles">
-				<div class="item big" data-num="1" style="background-image:url(img/foto/twothird.png);">
+				<div class="item twothirds" data-num="1" style="background-image:url(img/foto/twothird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
 							<a href="/showcase/twothird">
@@ -1076,7 +1078,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="item" data-num="2" style="background-image:url(img/foto/onethird.png);">
+				<div class="item onethird" data-num="2" style="background-image:url(img/foto/onethird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
 							<a href="/showcase/onethird">
@@ -1087,7 +1089,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="item" data-num="3" style="background-image:url(img/foto/onethird.png);">
+				<div class="item onethird" data-num="3" style="background-image:url(img/foto/onethird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
 							<a href="/showcase/onethird">
@@ -1098,7 +1100,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="item big" data-num="4" style="background-image:url(img/foto/twothird.png);">
+				<div class="item twothirds" data-num="4" style="background-image:url(img/foto/twothird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
 							<a href="/showcase/twothird">
@@ -1142,7 +1144,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="item big" data-num="8" style="background-image:url(img/foto/twothird.png);">
+				<div class="item twothirds" data-num="8" style="background-image:url(img/foto/twothird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
 							<a href="/showcase/twothird">
@@ -1154,17 +1156,17 @@
 					</div>
 				</div>
 				
-				<div class="item" data-num="9" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
+				<div class="item onethird" data-num="9" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
 					<div class="info"><p class="number">9</p></div>
 				</div>
 				
-				<div class="item" data-num="10" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
+				<div class="item onethird" data-num="10" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
 					<div class="info"><p class="number">10</p></div>
 				</div>
-				<div class="item" data-num="11" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
+				<div class="item onethird" data-num="11" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
 					<div class="info"><p class="number">11</p></div>
 				</div>
-				<div class="item" data-num="12" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
+				<div class="item onethird" data-num="12" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
 					<div class="info"><p class="number">12</p></div>
 				</div>
 			</div>
