--- a/views/backend/meta.ejs
+++ b/views/backend/meta.ejs
@@ -6,8 +6,8 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=3.0, user-scalable=yes" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  	<base href="/backend/" target="_self">
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/reset.css" />
 	<link rel="stylesheet" href="css/icons.css" />
